# TalentBridge_SA_Chatbot

./: .gitignore  README.md  app.py  pyproject.toml  requirements.txt
implementation/: answer.py  ingest.py
knowledge-base/company/: about.md  careers.md  culture.md  overview.md
knowledge-base/employees/: Aisha Patel.md  Amahle Sithole.md  Andile Khoza.md  Dineo Ramaphosa.md  Fatima Essop.md  Keanu Williams.md  Lungelo Dube.md  Luyanda Zulu.md  Mpho Kgosi.md  Naledi Dlamini.md  Nokwanda Mthembu.md  Rethabile Molefe.md  Simphiwe Shabalala.md  Sipho Nkosi.md  Thabo Mokoena.md  Yusuf Abrahams.md  Zanele Khumalo.md
knowledge-base/products/: products_and_services.md
vector_db/: chroma.sqlite3
