[project]
name = "rag-chatbot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "dotenv>=0.9.9",
    "gradio>=6.15.2",
    "ipykernel>=7.2.0",
    "langchain-chroma>=1.1.0",
    "langchain-community>=0.4.2",
    "langchain-huggingface>=1.2.2",
    "langchain-openai>=1.2.2",
    "langchain-pinecone>=0.2.13",
    "langchain-text-splitters>=1.1.2",
    "openai>=2.39.0",
    "pinecone>=7.3.0",
    "sentence-transformers>=5.5.1",
    "tiktoken>=0.13.0",
]
